# python-typelets

./: .gitignore  .reviewboardrc  README.md  dev-requirements.txt  doc-requirements.txt  pyproject.toml  tox.ini
docs/: conf.py  index.rst
docs/coderef/: index.rst
docs/releasenotes/: 1.0.1.rst  1.0.rst  1.1.0.rst  index.rst
typelets/: __init__.py  _version.py  funcs.py  json.py  runtime.py  symbols.py
typelets/django/: auth.py  forms.py  json.py  models.py  strings.py  urls.py
typelets/tests/: test_funcs.py
