[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'typelets'
description = 'Type hints and utility objects for Python and Django projects.'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]
license = { text = 'MIT' }
readme = 'README.md'
requires-python = '>=3.8'
dynamic = ['version']

dependencies = [
    'typing_extensions>=4.4',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
]


[project.urls]
homepage = 'https://typelets.readthedocs.io/'
documentation = 'https://typelets.readthedocs.io/'
repository = 'https://github.com/beanbaginc/python-typelets'


[tool.setuptools.dynamic]
version = { attr = 'typelets._version.get_package_version' }


[tool.setuptools.package-data]
typelets = ['py.typed']


[tool.pyright]
reportUnknownArgumentType = false
